# ChangeLog for net-libs/webkitgtk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 May 2008; Markus Ullmann <jokey@gentoo.org> +webkitgtk-33431.ebuild:
  Version bump

  11 Apr 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  -webkitgtk-31623.ebuild, +webkitgtk-31787.ebuild:
  Version bump. USE svg only enable svg-experimental

  05 Apr 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  webkitgtk-31623.ebuild:
  Bug 190347. Add ~ppc keyword.

  05 Apr 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  -webkitgtk-31535.ebuild, +webkitgtk-31623.ebuild:
  Bump version. Add SVG options for getting Acid3 to 100%

  03 Apr 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  -webkitgtk-31370.ebuild, webkitgtk-31535.ebuild:
  Fix SVG compilation

  02 Apr 2008; Markus Ullmann <jokey@gentoo.org> +webkitgtk-31535.ebuild:
  Version bump

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org> -webkitgtk-31275.ebuild,
  +webkitgtk-31370.ebuild:
  Version bump per hanno's request

  25 Mar 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  -webkitgtk-31224.ebuild:
  Removed old r31224.

  25 Mar 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> ++:
  Bug 190347. Updated ebuild for nightly build r31275

  22 Mar 2008; Tiziano Müller <dev-zero@gentoo.org>
  -webkitgtk-30468.ebuild, +webkitgtk-31224.ebuild:
  Version bump.

  23 Feb 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> 
  webkitgtk-30468.ebuild, -webkitgtk-30267.ebuild:
  Bug 190347. New ebuild for WebKit r30468 nightly build.

  15 Feb 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com> 
  +webkitgtk-30267.ebuild, -webkitgtk-29487.ebuild:
  New ebuild for new nightly build

  18 Jan 2008; (Tommy[D]) tommy100@gmx.de webkitgtk-29487.ebuild:
  Reorder KEYWORDS

  16 Jan 2008; (Tommy[D]) tommy100@gmx.de -webkitgtk-29438.ebuild:
  Drop old one

  15 Jan 2008; Luca Bruno (Lethalman) <lethalman88@gmail.com>
  +webkitgtk-29487.ebuild: